k8s/deploy/deployment-service-app.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webapp-depl
  namespace: dev-pet
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webapp
  template:
    metadata:
      labels:
        app: webapp
    spec:
      containers:
        - name: webapp
          image: devhdocker/petclinic-demo:v2
          ports:
            - containerPort: 8080
          resources:
            limits:
              memory: "500Mi"
              cpu: "500m"
      imagePullSecrets:
        - name: secretpod

---
apiVersion: v1
kind: Service
metadata:
  name: webapp-srv
  namespace: dev-pet
spec:
  selector:
    app: webapp
  ports:
      
    - protocol: TCP
      port: 80
      targetPort: 8080
  # type: LoadBalancer
