k8s/deploy/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  namespace: dev-pet
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/issuer: letsencrypt-nginx-cert
spec:
  tls:
  - hosts:
    # - buynew.co.in
    - petclinic.onestoptech.co.in 
    secretName: letsencrypt-nginx
  rules:

  - host: petclinic.onestoptech.co.in
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: webapp-srv
            port:
              number: 80
